# desafio-nl-consulting-api

./: .env.example  .gitignore  Dockerfile  README.md  anomally_rules.py  desafio-nl-consulting.pbit  docker-compose.yml  init_db.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: documents.py
app/core/: config.py  database.py  logging.py
app/models/: document.py  history.py
app/repositories/: document_repository.py
app/schemas/: document.py
app/services/: ai_service.py  anomaly_service.py  document_service.py
migrations/: env.py
migrations/versions/: e0c55ace38e4_initial_baseline.py
